--- a/landing.css
+++ b/landing.css
@@ -1,3 +1,23 @@
 header {
-  background: linear-gradient(#20475c 30% white 60%);
+  display: flex;
+  flex-direction: row;
+  background-color: #20475c;
+  width: 1500px;
+  height: 60px;
+}
+
+.button-header {
+  color: white;
+  background-color: #0f232e;
+  border-color: #eba67c;
+  width: 101px;
+  height: 34px;
+  border-radius: 40px;
+  margin-left: 30px;
+}
+
+.sideBar {
+  width: 63px;
+  height: 1028px;
+  background-color: #20475c;
 }
