--- a/landing.css
+++ b/landing.css
@@ -1,8 +1,12 @@
+body {
+  background-color: #0f232e0c;
+}
+
 header {
   display: flex;
   flex-direction: row;
-  background-color: #20475c;
-  width: 1500px;
+  background: linear-gradient(to bottom, #20475c 15%, #fff 100%);
+  width: 100%;
   height: 60px;
 }
 
@@ -12,12 +16,58 @@ header {
   border-color: #eba67c;
   width: 101px;
   height: 34px;
+  position: relative;
+  top: 10px;
   border-radius: 40px;
-  margin-left: 30px;
+  margin-left: 70px;
+}
+
+.input {
+  background-color: transparent;
+  border-radius: 7px;
+  border-color: #0f232e;
+  position: absolute;
+  top: 75px;
+  right: 40px;
+}
+
+.lupaInput {
+  position: absolute;
+  right: 145px;
+}
+
+.tittle {
+  position: absolute;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: inherit;
+  font-size: 116px;
+  color: #0a181f;
+  text-shadow: #eba67c;
+  text-shadow: -1px 0 #eba67c, 2px -1px 0 #eba67c, -1px 2px 0 #eba67c,
+    1px 2px 0 #eba67c;
+  font-weight: bold;
 }
 
 .sideBar {
+  position: absolute;
   width: 63px;
   height: 1028px;
   background-color: #20475c;
+}
+
+.menuHamb {
+  position: relative;
+  top: 130px;
+  left: 5px;
+  width: 50px;
+  height: 35px;
+}
+
+.fotoFondo {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  left: 700px;
+  bottom: 0px;
+  top: 350px;
 }
