--- a/landing.css
+++ b/landing.css
@@ -38,9 +38,11 @@ header {
 
 .tittle {
   position: absolute;
+  left: 350px;
+  top: 350px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-style: inherit;
-  font-size: 116px;
+  font-size: 120px;
   color: #0a181f;
   text-shadow: #eba67c;
   text-shadow: -1px 0 #eba67c, 2px -1px 0 #eba67c, -1px 2px 0 #eba67c,
@@ -50,24 +52,111 @@ header {
 
 .sideBar {
   position: absolute;
-  width: 63px;
-  height: 1028px;
+  width: 110px;
+  height: 2008px;
   background-color: #20475c;
 }
 
 .menuHamb {
   position: relative;
   top: 130px;
-  left: 5px;
+  left: 25px;
   width: 50px;
   height: 35px;
 }
 
+.button-side1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  background-color: #0f232e;
+  border-color: #eba67c;
+  width: 101px;
+  height: 34px;
+  position: relative;
+  top: 400px;
+  margin-top: 10px;
+  right: 65px;
+  border-radius: 40px;
+  margin-left: 70px;
+}
+
+.button-side2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  background-color: #0f232e;
+  border-color: #eba67c;
+  width: 101px;
+  height: 34px;
+  position: relative;
+  top: 400px;
+  margin-top: 10px;
+  right: 65px;
+  border-radius: 40px;
+  margin-left: 70px;
+}
+.button-side3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  background-color: #0f232e;
+  border-color: #eba67c;
+  width: 101px;
+  height: 34px;
+  position: sticky;
+  top: 460px;
+  margin-top: 10px;
+  right: 65px;
+  border-radius: 40px;
+  margin-left: 6px;
+}
 .fotoFondo {
   width: 800px;
   height: 500px;
   position: absolute;
-  left: 700px;
+  left: 720px;
   bottom: 0px;
   top: 350px;
+}
+
+i {
+  position: relative;
+  left: 300px;
+  bottom: 20px;
+  color: black;
+  width: 20px;
+  height: 20px;
+}
+
+i:hover {
+  color: blue;
+}
+
+p {
+  font-size: large;
+  font-family: "Courier New", Courier, monospace;
+  position: relative;
+  left: 700px;
+  bottom: 35px;
+}
+
+h2 {
+  color: black;
+  font-size: 40px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: relative;
+  top: 1000px;
+  left: 200px;
+}
+
+.lorem {
+  font-size: 17px;
+  font-family: "Courier New", Courier, monospace;
+  position: absolute;
+  top: 1200px;
+  left: 180px;
 }
