--- a/reset.css
+++ b/reset.css
@@ -1,11 +1,9 @@
 html,
 body,
-div,
 span,
 applet,
 object,
 iframe,
-h1,
 h3,
 h4,
 h5,
@@ -47,8 +45,6 @@ ol,
 ul,
 li,
 fieldset,
-form,
-label,
 legend,
 table,
 caption,
@@ -97,8 +93,7 @@ footer,
 header,
 hgroup,
 menu,
-nav,
-section {
+nav {
   display: block;
 }
 
