--- a/css/form.css
+++ b/css/form.css
@@ -56,39 +56,10 @@ header {
   margin-left: 70px;
 }
 
-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 300px;
-  margin: auto;
-  position: relative;
-  top: 200px;
-  left: 80px;
-  border: 1px solid #ccc; /* Borde alrededor del formulario */
-  padding: 40px; /* Espaciado interno dentro del formulario */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra para destacar el formulario */
-}
-
-h1 {
-  color: #0f232e;
-  font-size: 25px;
-  position: absolute;
-  top: 220px;
-  left: 400px;
-}
-
-label {
-  font-size: 20px;
-  color: #eba67c;
-  margin-bottom: 5px;
-  position: relative;
-  top: 60px;
-  align-items: center;
-}
-
 .input1,
-.input2 {
+.input2,
+.input3,
+.input4 {
   flex-direction: column;
   align-items: center;
   position: relative;
@@ -99,7 +70,33 @@ label {
   border-color: #0f232e;
   top: 60px;
 }
-
+h1 {
+  color: #0f232e;
+  font-size: 25px;
+  position: absolute;
+  top: 220px;
+  left: 400px;
+}
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 300px;
+  margin: auto;
+  position: relative;
+  top: 200px;
+  left: 80px;
+  padding: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+label {
+  font-size: 20px;
+  color: #eba67c;
+  margin-bottom: 5px;
+  position: relative;
+  top: 60px;
+  align-items: center;
+}
 button {
   color: white;
   background-color: #0f232e;
