--- a/css/products.css
+++ b/css/products.css
@@ -6,10 +6,21 @@ body {
 }
 
 header {
-  background: linear-gradient(to bottom, #20475c 15%, #fff 100%);
+  background: linear-gradient(to bottom, #20475c 40%, #fff 100%);
   color: #fff;
   padding: 10px;
   text-align: center;
+}
+
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: inherit;
+  font-size: 30px;
+  color: #0a181f;
+  text-shadow: #eba67c;
+  text-shadow: -1px 0 #eba67c, 2px -1px 0 #eba67c, -1px 2px 0 #eba67c,
+    1px 2px 0 #eba67c;
+  font-weight: bold;
 }
 
 .button-header {
@@ -24,17 +35,28 @@ header {
   margin-left: 70px;
 }
 
+.flecha {
+  position: absolute;
+  left: 82%;
+}
+.flecha2 {
+  position: absolute;
+  right: 80%;
+}
 .sideBar {
   position: absolute;
+  top: 30px;
   width: 110px;
-  height: 2008px;
+  height: 1250px;
   background-color: #20475c;
 }
 
 .menuHamb {
-  width: 100%;
-  max-width: 50px;
-  height: auto;
+  position: relative;
+  top: 130px;
+  left: 25px;
+  width: 50px;
+  height: 35px;
 }
 
 .button-side1,
@@ -56,28 +78,24 @@ header {
   margin-left: 70px;
 }
 
-.input1,
-.input2,
-.input3 {
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  padding: 10px;
-  margin-bottom: 10px;
-  background-color: white;
-  border-radius: 7px;
-  border-color: #0f232e;
-  top: 60px;
-}
-
 label {
   font-size: 20px;
   color: #eba67c;
   margin-bottom: 5px;
   position: relative;
-  top: 60px;
+  top: 80px;
   align-items: center;
 }
+
+p {
+  font-size: 20px;
+  color: #eba67c;
+  position: relative;
+  align-items: center;
+  top: 120px;
+  right: 65px;
+}
+
 button {
   color: white;
   background-color: #0f232e;
@@ -88,4 +106,37 @@ button {
   top: 120px;
   border-radius: 40px;
   margin-left: 70px;
+}
+
+div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 90px;
+}
+
+footer {
+  display: flex;
+  justify-self: center;
+  text-align: center;
+}
+
+.ciudad {
+  font-size: large;
+  font-family: "Courier New", Courier, monospace;
+  position: relative;
+  top: 300px;
+  left: 700px;
+  bottom: 35px;
+}
+
+i {
+  position: relative;
+  left: 300px;
+  bottom: 20px;
+  color: black;
+  top: 300px;
+  width: 20px;
+  height: 20px;
 }
