--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,3 @@
-html,
-body,
 span,
 applet,
 object,
@@ -20,7 +18,6 @@ code,
 del,
 dfn,
 em,
-img,
 ins,
 kbd,
 q,
@@ -35,8 +32,6 @@ tt,
 var,
 b,
 u,
-p,
-i,
 center,
 dl,
 dt,
@@ -55,20 +50,16 @@ tr,
 th,
 td,
 article,
-aside,
 canvas,
 details,
 embed,
 figure,
 figcaption,
-footer,
-header,
 hgroup,
 menu,
 nav,
 output,
 ruby,
-section,
 summary,
 time,
 mark,
@@ -85,20 +76,12 @@ video {
 /* HTML5 display-role reset for older browsers */
 
 article,
-aside,
 details,
 figcaption,
 figure,
-footer,
-header,
 hgroup,
-menu,
-nav {
+menu {
   display: block;
-}
-
-body {
-  line-height: 1;
 }
 
 ol,
