--- a/css/form.css
+++ b/css/form.css
@@ -9,10 +9,11 @@ header {
   background: linear-gradient(to bottom, #20475c 40%, #fff 100%);
   color: #fff;
   padding: 10px;
-  text-align: center;
+  width: 100%;
 }
 
-h1 {
+h1,
+h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-style: inherit;
   font-size: 30px;
@@ -21,6 +22,7 @@ h1 {
   text-shadow: -1px 0 #eba67c, 2px -1px 0 #eba67c, -1px 2px 0 #eba67c,
     1px 2px 0 #eba67c;
   font-weight: bold;
+  text-align: center;
 }
 
 .button-header {
@@ -32,13 +34,15 @@ h1 {
   position: relative;
   top: 10px;
   border-radius: 40px;
-  margin-left: 70px;
 }
 
 .sideBar {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   width: 110px;
   background-color: #20475c;
+  height: 100%;
 }
 
 .menuHamb {
@@ -80,23 +84,18 @@ h1 {
   border-color: #0f232e;
   top: 60px;
 }
-h2 {
-  color: #0f232e;
-  font-size: 25px;
-  position: absolute;
-  top: 220px;
-  left: 400px;
-}
+
 div {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   max-width: 300px;
   margin: auto;
   position: relative;
-  top: 165px;
-  left: 80px;
-  padding: 40px;
+  top: 140px;
+  left: 50px;
+  padding: 60px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 label {
@@ -107,6 +106,7 @@ label {
   top: 60px;
   align-items: center;
 }
+
 button {
   color: white;
   background-color: #0f232e;
@@ -116,9 +116,18 @@ button {
   position: relative;
   top: 120px;
   border-radius: 40px;
-  margin-left: 70px;
 }
 
 a {
   text-decoration: none;
+}
+
+footer {
+  font-family: "Courier New", Courier, monospace;
+  position: relative;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  top: 600px;
 }
