--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,22 @@
 body {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  margin: 0;
   background-color: #0f232e0c;
   background-image: url("../Assets/Ellipse\ 5.png");
-  background-size: 100% 100%;
+  background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 header {
@@ -46,7 +54,7 @@ header {
 
 .tittle {
   position: absolute;
-  left: 350px;
+  left: 180px;
   top: 100px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-style: inherit;
@@ -59,10 +67,12 @@ header {
 }
 
 .sideBar {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   width: 110px;
-  height: 100%;
   background-color: #20475c;
+  height: 100%;
 }
 
 .menuHamb {
@@ -92,54 +102,40 @@ header {
   margin-left: 70px;
 }
 
-footer {
-  display: flex;
-  position: relative;
-  gap: 15px;
-}
-
-i {
-  position: relative;
-  left: 300px;
-  bottom: 20px;
-  color: black;
-  width: 20px;
-  height: 20px;
-}
-
 i:hover {
   color: blue;
 }
 
 section {
   display: flex;
-  width: 50px;
-  height: 50px;
+  text-align: center;
 }
 
-p {
-  position: relative;
-  left: 110px;
-  bottom: 35px;
-  font-size: 20px;
-  font-family: "Courier New", Courier, monospace;
-  top: 300px;
-}
-
-h2 {
+.nosotros {
   color: black;
   font-size: 40px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   position: relative;
-  top: 350px;
-  left: 200px;
+  top: 370px;
+  left: 50px;
 }
 
-.ciudad {
-  font-size: large;
+.lorem {
+  position: absolute;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Courier New", Courier, monospace;
+  top: 800px;
+  right: 200px;
+  left: 280px;
+}
+
+footer {
   font-family: "Courier New", Courier, monospace;
   position: relative;
-  top: 30px;
-  left: 700px;
-  bottom: 35px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  top: 600px;
 }
