--- a/css/products.css
+++ b/css/products.css
@@ -1,14 +1,16 @@
 body {
-  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 header {
   background: linear-gradient(to bottom, #20475c 40%, #fff 100%);
   color: #fff;
   padding: 10px;
+  width: 100%;
   text-align: center;
 }
 
@@ -37,18 +39,22 @@ h1 {
 
 .flecha {
   position: absolute;
-  left: 82%;
+  top: 107px;
+  left: 84%;
 }
 .flecha2 {
   position: absolute;
+
   right: 80%;
 }
+
 .sideBar {
-  position: absolute;
-  top: 30px;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   width: 110px;
-  height: 1250px;
   background-color: #20475c;
+  height: 100%;
 }
 
 .menuHamb {
@@ -87,7 +93,7 @@ label {
   align-items: center;
 }
 
-p {
+.precio {
   font-size: 20px;
   color: #eba67c;
   position: relative;
@@ -96,7 +102,7 @@ p {
   right: 65px;
 }
 
-button {
+.comprar1 {
   color: white;
   background-color: #0f232e;
   border-color: #eba67c;
@@ -113,30 +119,15 @@ div {
   align-items: center;
   justify-content: center;
   position: relative;
-  top: 90px;
+  top: 100px;
 }
 
 footer {
-  display: flex;
-  justify-self: center;
-  text-align: center;
-}
-
-.ciudad {
-  font-size: large;
   font-family: "Courier New", Courier, monospace;
   position: relative;
-  top: 300px;
-  left: 700px;
-  bottom: 35px;
-}
-
-i {
-  position: relative;
-  left: 300px;
-  bottom: 20px;
-  color: black;
-  top: 300px;
-  width: 20px;
-  height: 20px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  top: 400px;
 }
